# storage/api-docs/api-docs.json
@@ -261,330 +261,6 @@
                 }
             }
         },
-        "/books": {
-            "get": {
-                "tags": [
-                    "Books"
-                ],
-                "summary": "Get list of Book",
-                "description": "Returns list of Book",
-                "operationId": "indexBook",
-                "responses": {
-                    "200": {
-                        "description": "Successful operation",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/Books"
-                                }
-                            }
-                        }
-                    }
-                }
-            },
-            "post": {
-                "tags": [
-                    "Books"
-                ],
-                "summary": "Insert a new Book",
-                "description": "Insert a new Book",
-                "operationId": "storeBook",
-                "requestBody": {
-                    "description": "Book to create",
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "properties": {
-                                    "data": {
-                                        "$ref": "#/components/schemas/Book"
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "201": {
-                        "description": "Book created",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "data": {
-                                            "$ref": "#/components/schemas/Book"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    },
-                    "422": {
-                        "description": "Validation exception"
-                    }
-                }
-            }
-        },
-        "/books/{book_id}": {
-            "get": {
-                "tags": [
-                    "Books"
-                ],
-                "summary": "Show a Book from his Id",
-                "description": "Show a Book from his Id",
-                "operationId": "showBook",
-                "parameters": [
-                    {
-                        "name": "book_id",
-                        "in": "path",
-                        "description": "Book id",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Successful operation",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "data": {
-                                            "$ref": "#/components/schemas/Book"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    },
-                    "404": {
-                        "description": "Book not found"
-                    }
-                }
-            },
-            "delete": {
-                "tags": [
-                    "Books"
-                ],
-                "summary": "Delete a Book",
-                "description": "Delete a Book",
-                "operationId": "destroyBook",
-                "parameters": [
-                    {
-                        "$ref": "#/components/parameters/Book--id"
-                    }
-                ],
-                "responses": {
-                    "204": {
-                        "description": "No content"
-                    },
-                    "404": {
-                        "description": "Book not found"
-                    }
-                }
-            },
-            "patch": {
-                "tags": [
-                    "Books"
-                ],
-                "summary": "Update an existing Book",
-                "description": "Update an existing Book",
-                "operationId": "updateBook",
-                "parameters": [
-                    {
-                        "name": "book_id",
-                        "in": "path",
-                        "description": "Book id",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "requestBody": {
-                    "description": "Book to update",
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "properties": {
-                                    "data": {
-                                        "$ref": "#/components/schemas/Book"
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "204": {
-                        "description": "No content"
-                    }
-                }
-            }
-        },
-        "/products": {
-            "get": {
-                "tags": [
-                    "Products"
-                ],
-                "summary": "Get list of Product",
-                "description": "Returns list of Product",
-                "operationId": "indexProduct",
-                "responses": {
-                    "200": {
-                        "description": "Successful operation",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/Products"
-                                }
-                            }
-                        }
-                    }
-                }
-            },
-            "post": {
-                "tags": [
-                    "Products"
-                ],
-                "summary": "Insert a new Product",
-                "description": "Insert a new Product",
-                "operationId": "storeProduct",
-                "requestBody": {
-                    "description": "Product to create",
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "properties": {
-                                    "data": {
-                                        "$ref": "#/components/schemas/Product"
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "201": {
-                        "description": "Product created",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "data": {
-                                            "$ref": "#/components/schemas/Product"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    },
-                    "422": {
-                        "description": "Validation exception"
-                    }
-                }
-            }
-        },
-        "/products/{product_id}": {
-            "get": {
-                "tags": [
-                    "Products"
-                ],
-                "summary": "Show a Product from his Id",
-                "description": "Show a Product from his Id",
-                "operationId": "showProduct",
-                "parameters": [
-                    {
-                        "$ref": "#/components/parameters/Product--id"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Successful operation",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "data": {
-                                            "$ref": "#/components/schemas/Product"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    },
-                    "404": {
-                        "description": "Product not found"
-                    }
-                }
-            },
-            "delete": {
-                "tags": [
-                    "Products"
-                ],
-                "summary": "Delete a Product",
-                "description": "Delete a Product",
-                "operationId": "destroyProduct",
-                "parameters": [
-                    {
-                        "$ref": "#/components/parameters/Product--id"
-                    }
-                ],
-                "responses": {
-                    "204": {
-                        "description": "No content"
-                    },
-                    "404": {
-                        "description": "Product not found"
-                    }
-                }
-            },
-            "patch": {
-                "tags": [
-                    "Products"
-                ],
-                "summary": "Update an existing Product",
-                "description": "Update an existing Product",
-                "operationId": "updateProduct",
-                "parameters": [
-                    {
-                        "$ref": "#/components/parameters/Product--id"
-                    }
-                ],
-                "requestBody": {
-                    "description": "Product to update",
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "properties": {
-                                    "data": {
-                                        "$ref": "#/components/schemas/Product"
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "204": {
-                        "description": "No content"
-                    }
-                }
-            }
-        },
         "/roles": {
             "get": {
                 "tags": [
